# curstomer-support-agent-bot

./: .gitignore  README.md  pyproject.toml
data/docs/: sample_support.md
src/agent/: agent.py  escalation.py  guardrails.py  memory.py
src/app/: config.py  main.py  server.py
src/eval/: report.py  shadow.py  synthetic.py
src/rag/: index.py  pipeline.py
tests/: test_agent_flow.py  test_api.py
web/: index.html
web/static/: app.js  styles.css
