[project]
name = "customer-support-bot"
version = "0.1.0"
description = "Autonomous support agent scaffold with LangChain, RAG, and Ollama."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-core>=0.2.0",
  "langchain-ollama>=0.1.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "chromadb>=0.5.0",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.12.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
